[gd_scene load_steps=4 format=3 uid="uid://dut8c2c7xf1og"]

[ext_resource type="Script" uid="uid://bsie01oq8xgas" path="res://_ui/menus/cross_menu.gd" id="1_i2b6x"]
[ext_resource type="PackedScene" uid="uid://b1tc8dl40itw5" path="res://_ui/menus/InventoryMenu.tscn" id="2_f22no"]
[ext_resource type="Script" uid="uid://cehaps8btdgs3" path="res://_ui/menus/inventory_menu.gd" id="3_brrji"]

[node name="CrossMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_i2b6x")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2

[node name="Menus" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InventoryMenu" type="Control" parent="Menus" instance=ExtResource("2_f22no")]
anchors_preset = 0
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3_brrji")

[node name="SkillMenu" type="Control" parent="Menus"]
anchors_preset = 0

[node name="MapMenu" type="Control" parent="Menus"]
anchors_preset = 0

[node name="MagicMenu" type="Control" parent="Menus"]
anchors_preset = 0
